allowing the 'Comment icon' as well as the 'View' text to launch the Response/Comment popup, testing, testing, tesing and fixing the plugin for the themes - menu visibility fix - Responsive, Point, Virtue, Wilson, TypeFocus, Customizr), Language shown on Course List Page for Responsive, Oxygen, Point, Virtue, The Box), listing image (Responsive, Virtue, Capture, Point, Capture, The Box), Course Menu visible (Virtue, Wilson, Customizr, Typefocus), Course Menu Functioning Correctly(made visible, don't work well still, Need to run a check 'if primary menu defined' by theme - done, Long Unit Titles - done..)

--- a/css/settings.css
+++ b/css/settings.css
@@ -2726,6 +2726,9 @@ label.error:before {
     padding: 8px 30px 8px 10px;
     text-decoration: none;
     min-height: 18px;/*25*/
+    text-overflow:ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .mp-wrap .mp-settings {
     background: #fff;
