--- a/css/settings_responsive.css
+++ b/css/settings_responsive.css
@@ -4,63 +4,66 @@
 
 /* Menu bar goes responsive */
 @media only screen and ( max-width: 782px ) {
-	.mp-wrap .mp-tabs {
-	    width: 220px;
-	}	
-	
-	.sticky-slider {
-		float:right;
-		font-size:22px;
-		position: relative;
-		top: 28px;
-		left:32px;
-		z-index: 20;
-		color: #ffffff;
-	}
-	.sticky-wrapper {
-	    width: 220px;
-	    position: absolute;
-		left: -235px;
-		background: #0074a2;
-		padding-right: 42px;
-	}
-	
-	.sticky-wrapper + .mp-settings,	
-	.mp-wrap .mp-settings {
-	    background: none repeat scroll 0 0 #FFFFFF;
-	    border: 1px solid #CCCCCC;
-	    left: 32px;
-	    overflow: visible;
-	    padding: 20px;
-	    position: relative;
-		margin: 0 15px 0 0 !important;
-	}	
-	
-	#settings-wrap .mp-tabs .mp-tab:last-child a,
-	.mp-wrap .mp-tab-link {
-		padding: 20px 15px;
-		color: #ffffff;
-	}
-	
-	
-	.course-holder label { 
-		display: inline;
-	}
-	.course-holder .sidebar-name {
-		margin-left: 0 !important;
-	}
+    .mp-wrap .mp-tabs {
+        width: 220px;
+    }	
+
+    .sticky-slider {
+        float:right;
+        font-size:22px;
+        position: relative;
+        top: 28px;
+        left:32px;
+        z-index: 20;
+        color: #ffffff;
+    }
+    .sticky-wrapper {
+        width: 220px;
+        position: absolute;
+        left: -235px;
+        background: #0074a2;
+        padding-right: 42px;
+    }
+
+    .sticky-wrapper + .mp-settings,	
+    .mp-wrap .mp-settings {
+        background: none repeat scroll 0 0 #FFFFFF;
+        border: 1px solid #CCCCCC;
+        left: 32px;
+        overflow: visible;
+        padding: 20px;
+        position: relative;
+        margin: 0 15px 0 0 !important;
+    }	
+
+    #settings-wrap .mp-tabs .mp-tab:last-child a,
+    .mp-wrap .mp-tab-link {
+        padding: 20px 15px;
+        color: #ffffff;
+        text-overflow:ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+
+
+    .course-holder label { 
+        display: inline;
+    }
+    .course-holder .sidebar-name {
+        margin-left: 0 !important;
+    }
 
 }
 
 /* List table anomalies */
 @media ( max-width: 555px ) {
-	
+
 }
 
 /* For extra small devices */
 @media ( max-width: 480px ) {
-	.half { 
-		width: 100%;
-		clear: both;
-	}
+    .half { 
+        width: 100%;
+        clear: both;
+    }
 }
